--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,10 @@
 <html>
 
 <head>
+
+
+
+    
     <meta charSet="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -18,12 +22,55 @@
     <link rel="apple-touch-icon" sizes="256x256" href="/icons/icon-256x256.png?v=4a9773549091c227cd2eb82ccd9c5e3a" />
     <link rel="apple-touch-icon" sizes="384x384" href="/icons/icon-384x384.png?v=4a9773549091c227cd2eb82ccd9c5e3a" />
     <link rel="apple-touch-icon" sizes="512x512" href="/icons/icon-512x512.png?v=4a9773549091c227cd2eb82ccd9c5e3a" />
+
+    <style type="text/css" id="jarallax-clip-0">#jarallax-container-0 {
+        clip: rect(0 1790px 600px 0);
+        clip: rect(0, 1790px, 600px, 0);
+     }</style>
+
+<style type="text/css" id="jarallax-clip-0">#jarallax-container-0 {
+        clip: rect(0 1790px 600px 0);
+        clip: rect(0, 1790px, 600px, 0);
+     }</style>
+<style>
+     html,
+     body,
+     header,
+     .jarallax {
+       height: 100%;
+     }
+
+     @media (min-width: 560px) and (max-width: 740px) {
+       html,
+       body,
+       header,
+       .jarallax {
+         height: 600px;
+       }
+     }
+ </style>
+<link href="../css/style.css" rel="stylesheet">
+<!-- Your custom styles (optional) -->
+<link href="../css/mdb.min.css" rel="stylesheet">
+<!-- Material Design Bootstrap -->
+<link href="../css/bootstrap.min.css" rel="stylesheet">
+<!-- Bootstrap core CSS -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css">
+<!-- Font Awesome -->
+<title>Material Design Bootstrap</title>
+<meta http-equiv="x-ua-compatible" content="ie=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta charset="utf-8">
+
+
+
+
     <script src="/socket.io/socket.io.js"></script>
 </head>
 
 <body>
     <div id="root"></div>
-    <!-- <div id="___gatsby"></div> -->
+
     <script src="/polyfill.js" nomodule=""></script>
     <script src="/commons.js"></script>
 </body>
