changed to have footer

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,6 @@
 <html>
 
 <head>
-
-
-
     
     <meta charSet="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
@@ -28,10 +25,10 @@
         clip: rect(0, 1790px, 600px, 0);
      }</style>
 
-<style type="text/css" id="jarallax-clip-0">#jarallax-container-0 {
+<!-- <style type="text/css" id="jarallax-clip-0">#jarallax-container-0 {
         clip: rect(0 1790px 600px 0);
         clip: rect(0, 1790px, 600px, 0);
-     }</style>
+     }</style> -->
 <style>
      html,
      body,
